# fadein-watermark-remover

./: README.md  add-shortcut.py  pyproject.toml  remove-shortcut.py
src/fadein_watermark_remover/: main.py
