[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fadein-watermark-remover"
description = "Remove Fade In watermarks from PDF files."
version = "0.1.0"
authors = [
    {name = "Andreas Delabie"},
    {email = "andreas.delabie@gmail.com"}
]
dependencies = [
    "pymupdf",
    "elevate"
]
readme = "README.md"

[project.scripts]
fadein-watermark-remover = "fadein_watermark_remover.main:main"